@@ -1,7 +1,7 @@
 [general]
 description = disaggregation with a complex logic tree
 calculation_mode = disaggregation
-#disagg_by_src = true
+disagg_by_src = true
 
 [geometry]
 sites = -122.6 38.3, -121.5 38.3
