@@ -1,37 +1,0 @@
-[general]
-description = disaggregation with a complex logic tree
-calculation_mode = disaggregation
-
-[geometry]
-sites = -122.6 38.3
-
-[site_params]
-reference_vs30_type = measured
-reference_vs30_value = 760.0
-reference_depth_to_2pt5km_per_sec = 5.0
-reference_depth_to_1pt0km_per_sec = 100.0
-
-[erf]
-width_of_mfd_bin = 0.1
-rupture_mesh_spacing = 2.0
-area_source_discretization = 10
-
-[logic_trees]
-source_model_logic_tree_file = source_model_logic_tree.xml
-gsim_logic_tree_file = gsim_logic_tree.xml
-
-[hazard_calculation]
-number_of_logic_tree_samples = 1
-random_seed = 24
-truncation_level = 3
-maximum_distance = 60.0
-investigation_time = 50
-disagg_by_src = true
-iml_disagg = {'PGA': 0.02}
-mag_bin_width = 0.5
-distance_bin_width = 5.0
-coordinate_bin_width = 1
-num_epsilon_bins = 4
-
-[export]
-export_dir = /tmp
