@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Now we generate the output `disagg_by_src` during disaggregation even in the
+    case of multiple realizations
   * The filenames generated by disagg_by_src exporter now contains the site ID
     and not longitude and latitude, consistently with the other exporters
   * Accepted again meanLRs greater than 1 in vulnerability functions of kind LN
